public class Const
{

}

public class ANIMATION
{
    public const string IDLE = "Idle";
    public const string WALK = "Walk";
    public const string MELEE_ATTACK = "Melee Attack";
    public const string DEAD = "Dead";
    public const string PICK_UP = "Pick Up";
    public const string RIFLE_CHASE = "Rifle Run";
    public const string RIFLE_FIRE = "Rifle Fire";
}

